# ripweb

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DESIGN_DOCUMENT.md  Implementation.md  README.md  clippy.toml  deny.toml  justfile  plan.md  seal_ref.jsonl  seal_ref.parquet  webwalkerqa_ref.jsonl  webwalkerqa_ref.parquet
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
benches/: README.md  github_format.rs  minify.rs  token_efficiency.rs
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
config/: ripweb.toml
corpus/: README.md  seal_ref.jsonl  webwalkerqa_ref.jsonl
docs/: CONFIGURATION.md  CURRENT_PRIORITIES.md  EXTRACTION.md  NETWORK.md  OUTPUT_CONTRACT.md  PRODUCT_SPEC.md  README.md  TESTING.md
eval/: benchmarks.jsonl
examples/: README.md  bulk_extract_report.rs  fetch_freeze_targets.rs  gen_baseline.rs  gen_golden.rs  generate_fixtures.rs  metrics.rs  prepare_freeze_targets.rs  print_devto.rs  recommend_freeze_set.rs  review_corpus.rs  review_freeze_progress.rs  sync_freeze_review.rs  sync_goldens.rs  test_torture.rs  tokenizer_audit.rs
scratch/: convert_parquet.py
searxng/: docker-compose.yml  settings.yml  setup.sh  teardown.sh
src/: cli.rs  cli_utils.rs  config.rs  corpus.rs  error.rs  lib.rs  main.rs  mode.rs  router.rs  run.rs  verbosity.rs
tests/: README.md  apostle_extraction.rs  cli.rs  cli_e2e.rs  contract_cli.rs  contract_e2e.rs  contract_output.rs  coverage_boost.rs  crawler.rs  extract_web.rs  extraction_generic.rs  extraction_metrics.rs  extraction_torture.rs  fetch.rs  fetch_cache.rs  fetch_client.rs  fetch_llms_txt.rs  fetch_network.rs  metrics.rs  output_contract.rs  proptest.rs  research_find.rs  research_wayback.rs  research_wikidata.rs  router.rs  search.rs  search_adapters.rs  (+11 more)
(+187 files in other folders)
